--- a/cloud-laas/gateway-server/pom.xml
+++ b/cloud-laas/gateway-server/pom.xml
@@ -47,6 +47,17 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.projectlombok</groupId>-->
+        <!--            <artifactId>lombok</artifactId>-->
+        <!--        </dependency>-->
+        <!--        common-base中有lombok，所以不需要再写了-->
+
+        <!--        公共基础模块依赖-->
+        <dependency>
+            <groupId>com.powernode</groupId>
+            <artifactId>common-base</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
