--- a/pom.xml
+++ b/pom.xml
@@ -31,85 +31,118 @@
         <mybatis-plus.version>3.5.3.2</mybatis-plus.version>
         <mysql.version>8.0.32</mysql.version>
         <druid.version>1.2.18</druid.version>
-        <hutool.version>5.8.2</hutool.version>
+        <hutool-all.version>5.8.2</hutool-all.version>
         <springfox.version>3.0.0</springfox.version>
         <common-base.version>1.0-SNAPSHOT</common-base.version>
+        <common-core.version>1.0-SNAPSHOT</common-core.version>
+        <fastjson.version>1.2.80</fastjson.version>
+        <aliyun-sdk-oss.version>3.15.1</aliyun-sdk-oss.version>
+        <easyexcel.version>3.3.2</easyexcel.version>
+        <aliyun-dx.version>2.0.24</aliyun-dx.version>
     </properties>
-    <!--    父工程需要遵循两点要求：-->
-    <!--    1.packaging标签文本内容必须是pom-->
-    <!--    2.删除src-->
+
+    <!--父工程必须遵循2种要求：
+    1.packaging标签文本内容必须是pom
+    2.删除src-->
     <packaging>pom</packaging>
 
     <dependencies>
-        <!--        专门读取bootstrap.yml/properties配置文件依赖-->
+        <!--专门读取bootstrap.yml/properties配置文件依赖-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
     </dependencies>
+
     <dependencyManagement>
         <dependencies>
+            <!--spring-cloud依赖-->
             <dependency>
-                <!--                springcloud依赖-->
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!--spring cloud ablibaba依赖-->
             <dependency>
-                <!--                springcloud alibaba依赖-->
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                 <version>${spring-cloud-alibaba.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <!--            mybatis plus依赖-->
+            <!--mybatis plus依赖-->
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis-plus.version}</version>
             </dependency>
-            <!--            mybatis plus常用注解依赖-->
+            <!--mybatis plus常用注解依赖-->
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-annotation</artifactId>
                 <version>${mybatis-plus.version}</version>
             </dependency>
-            <!--            mysql8驱动-->
+            <!--mysql8驱动-->
             <dependency>
                 <groupId>com.mysql</groupId>
                 <artifactId>mysql-connector-j</artifactId>
                 <version>${mysql.version}</version>
             </dependency>
-            <!--            druid数据源连接依赖-->
+            <!--druid数据源连接池-->
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid.version}</version>
             </dependency>
-            <!--            第三方工具类库hutool-->
+            <!--第三方工具类库hutool-->
             <dependency>
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
-                <version>${hutool.version}</version>
+                <version>${hutool-all.version}</version>
             </dependency>
-            <!--            swagger依赖-->
+            <!--swagger依赖-->
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-boot-starter</artifactId>
                 <version>${springfox.version}</version>
             </dependency>
-            <!--        公共基础模块依赖-->
+            <!--公共基础模块依赖-->
             <dependency>
                 <groupId>com.powernode</groupId>
                 <artifactId>common-base</artifactId>
                 <version>${common-base.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+            <!--公共核心业务模块依赖-->
+            <dependency>
+                <groupId>com.powernode</groupId>
+                <artifactId>common-core</artifactId>
+                <version>${common-core.version}</version>
+            </dependency>
+            <!--阿里云对象存储服务依赖-->
+            <dependency>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>${aliyun-sdk-oss.version}</version>
+            </dependency>
+            <!--easyexcel依赖-->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>easyexcel</artifactId>
+                <version>${easyexcel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>dysmsapi20170525</artifactId>
+                <version>${aliyun-dx.version}</version>
+            </dependency>
         </dependencies>
-
-
     </dependencyManagement>
 
 </project>
