--- a/power-business/manager-service/src/main/resources/bootstrap.yml
+++ b/power-business/manager-service/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ spring:
       username: nacos
       password: nacos
       discovery:
-        namespace: 0416e0bb-f340-496d-a891-8ad681902d66
+        namespace: xxxx
         group: A_GROUP
         service: ${spring.application.name}
       config:
