--- a/power-common/common-core/pom.xml
+++ b/power-common/common-core/pom.xml
@@ -17,12 +17,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <!--
-            nacos注册中心依赖，nacos配置中心依赖
-            spring security安全框架依赖，spring web依赖，
-            spring cloud openfeign依赖，spring负载均衡依赖，
-            mybatisplus依赖，redis依赖，mysql驱动，druid数据源依赖
-            swagger依赖
-        -->
+        nacos注册中心依赖，nacos配置中心依赖
+        spring security安全框架依赖，spring web依赖，
+        spring cloud openfeign依赖，spring负载均衡依赖，
+        mybatisplus依赖，redis依赖，mysql驱动，druid数据源依赖
+        swagger依赖
+    -->
     <dependencies>
         <!--nacos注册中心依赖-->
         <dependency>
@@ -34,11 +34,11 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
-<!--        &lt;!&ndash;spring security依赖&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
+        <!--spring security依赖-->
+        <!--<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>-->
         <!--spring web依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -60,30 +60,30 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
         <!--mysql8驱动-->
-        <dependency>
+        <!--<dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
-        </dependency>
+        </dependency>-->
         <!--druid数据源依赖-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
-<!--        &lt;!&ndash;swagger依赖&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>io.springfox</groupId>-->
-<!--            <artifactId>springfox-boot-starter</artifactId>-->
-<!--        </dependency>-->
+        <!--swagger依赖-->
+        <!--<dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+        </dependency>-->
         <!--redis依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-<!--        &lt;!&ndash;lombok&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.projectlombok</groupId>-->
-<!--            <artifactId>lombok</artifactId>-->
-<!--        </dependency>-->
+        <!--lombok-->
+        <!--<dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>-->
         <!--公共基础模块-->
         <dependency>
             <groupId>com.powernode</groupId>
