--- a/power-business/product-service/pom.xml
+++ b/power-business/product-service/pom.xml
@@ -16,5 +16,41 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <!--
+            公共核心业务模块依赖（nacos注册中心依赖，nacos配置中心依赖，redis依赖，fastjson,hutool,swagger，公共基础模块依赖）
+            mysql驱动,druid数据源依赖，mybatisplus依赖,
+        -->
+    <dependencies>
+        <!--公共核心业务模块依赖-->
+        <dependency>
+            <groupId>com.powernode</groupId>
+            <artifactId>common-core</artifactId>
+        </dependency>
+        <!--mysql驱动-->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+        </dependency>
+        <!--druid数据源依赖-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+        <!--mybatisplus依赖-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
 
+
+    <build>
+        <plugins>
+            <!--项目打包插件-->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
