--- a/power-business/member-service/pom.xml
+++ b/power-business/member-service/pom.xml
@@ -16,5 +16,43 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <!--
+            公共核心业务模块依赖：公共基础模块依赖,nacos注册中心依赖,nacos配置中心依赖,mybatisplus依赖,swagger依赖,fastjson依赖,hutool依赖
+            mysql8驱动依赖,druid数据源依赖
+        -->
+    <dependencies>
+        <!--公共核心业务模块依赖-->
+        <dependency>
+            <groupId>com.powernode</groupId>
+            <artifactId>common-core</artifactId>
+        </dependency>
+        <!--mysql8驱动依赖-->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+        </dependency>
+        <!--druid数据源依赖-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>dysmsapi20170525</artifactId>
+        </dependency>
+        <!--<dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>-->
+    </dependencies>
 
+    <build>
+        <plugins>
+            <!--项目打包依赖-->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
