--- a/power-business/order-service/pom.xml
+++ b/power-business/order-service/pom.xml
@@ -16,5 +16,50 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <!--
+            公共核心模块依赖：公共基础模块依赖，nacos注册中心依赖，nacos配置中心依赖，mybatisplus依赖，fastjson，hutool依赖
+            mysql8驱动依赖，druid数据源依赖
+        -->
+    <dependencies>
+        <!--公共核心模块依赖-->
+        <dependency>
+            <groupId>com.powernode</groupId>
+            <artifactId>common-core</artifactId>
+        </dependency>
+        <!--mysql8驱动依赖-->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+        </dependency>
+        <!--druid数据源依赖-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+        <!--sentinel依赖-->
+        <!--<dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>-->
+        <!--easyexcel依赖-->
+        <!--<dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+        </dependency>-->
+        <!--rabbitmq依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+    </dependencies>
 
+    <build>
+        <plugins>
+            <!--项目打包插件-->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
