--- a/power-business/cart-service/pom.xml
+++ b/power-business/cart-service/pom.xml
@@ -17,4 +17,32 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <!--公共核心业务模块依赖-->
+        <dependency>
+            <groupId>com.powernode</groupId>
+            <artifactId>common-core</artifactId>
+        </dependency>
+        <!--mysql8驱动依赖-->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+        </dependency>
+        <!--druid数据源依赖-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <!--项目打包插件-->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.7.2</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
